Fixing cursor flicker with plugins, bug 118877 r=kmcclusk@netscape.com sr=beard